--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -146,5 +146,6 @@
   "mn82:23.2": "„Wie sind sie, Hausherr, die Nymphen, um derentwillen du das geistliche Leben führst?“ ",
   "mn82:23.3": "„Schwestern, ich führe das geistliche Leben nicht um Nymphen willen.“ ",
   "mn82:23.4": "Mit den Worten: „Unser Hausherr Raṭṭhapāla redet uns als Schwestern an!“ fielen sie eben da ohnmächtig nieder. ",
-  "mn82:24.1": "Da sagte Raṭṭhapāla zu seinem Vater: "
+  "mn82:24.1": "Da sagte Raṭṭhapāla zu seinem Vater: ",
+  "mn82:24.2": "„Wenn Essen zum Geben da ist, Hausbesitzer, gib es bitte.“ "
 }
