Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -147,5 +147,5 @@
   "mn82:23.3": "„Schwestern, ich führe das geistliche Leben nicht um Nymphen willen.“ ",
   "mn82:23.4": "Mit den Worten: „Unser Hausherr Raṭṭhapāla redet uns als Schwestern an!“ fielen sie eben da ohnmächtig nieder. ",
   "mn82:24.1": "Da sagte Raṭṭhapāla zu seinem Vater: ",
-  "mn82:24.2": "„Wenn Essen zum Geben da ist, Hausbesitzer, gib es bitte.“ "
+  "mn82:24.2": "„Wenn Essen zum Geben da ist, Hausbesitzer, gib es bitte. "
 }
