--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -148,5 +148,6 @@
   "mn82:23.4": "Mit den Worten: „Unser Hausherr Raṭṭhapāla redet uns als Schwestern an!“ fielen sie eben da ohnmächtig nieder. ",
   "mn82:24.1": "Da sagte Raṭṭhapāla zu seinem Vater: ",
   "mn82:24.2": "„Wenn Essen zum Geben da ist, Hausbesitzer, gib es bitte. ",
-  "mn82:24.3": "Aber bedränge mich nicht.“ "
+  "mn82:24.3": "Aber bedränge mich nicht.“ ",
+  "mn82:24.4": "„Iss, lieber Raṭṭhapāla, das Essen ist fertig.“ "
 }
