Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -149,5 +149,6 @@
   "mn82:24.1": "Da sagte Raṭṭhapāla zu seinem Vater: ",
   "mn82:24.2": "„Wenn Essen zum Geben da ist, Hausbesitzer, gib es bitte. ",
   "mn82:24.3": "Aber bedränge mich nicht.“ ",
-  "mn82:24.4": "„Iss, lieber Raṭṭhapāla, das Essen ist fertig.“ "
+  "mn82:24.4": "„Iss, lieber Raṭṭhapāla, das Essen ist fertig.“ ",
+  "mn82:24.5": "Und Raṭṭhapālas Vater bewirtete und bediente den Ehrwürdigen Raṭṭhapāla eigenhändig mit köstlichen frischen und gekochten Speisen. "
 }
