--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -151,5 +151,6 @@
   "mn82:24.3": "Aber bedränge mich nicht.“ ",
   "mn82:24.4": "„Iss, lieber Raṭṭhapāla, das Essen ist fertig.“ ",
   "mn82:24.5": "Und Raṭṭhapālas Vater bewirtete und bediente den Ehrwürdigen Raṭṭhapāla eigenhändig mit köstlichen frischen und gekochten Speisen. ",
-  "mn82:24.6": "Als er gegessen und Hand und Schale gewaschen hatte, sagte er im Stehen eben da diese Strophen auf: "
+  "mn82:24.6": "Als er gegessen und Hand und Schale gewaschen hatte, sagte er im Stehen eben da diese Strophen auf: ",
+  "mn82:25.1": "„Sieh die herausgeputzte Puppe, "
 }
