--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -154,5 +154,6 @@
   "mn82:24.6": "Als er gegessen und Hand und Schale gewaschen hatte, sagte er im Stehen eben da diese Strophen auf: ",
   "mn82:25.1": "„Sieh die herausgeputzte Puppe, ",
   "mn82:25.2": "ein Körper, aus Wunden zusammengesetzt, ",
-  "mn82:25.3": "krank, lässt dir keine Ruhe, "
+  "mn82:25.3": "krank, lässt dir keine Ruhe, ",
+  "mn82:25.4": "und nichts an ihm hat Bestand. "
 }
