Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -155,5 +155,6 @@
   "mn82:25.1": "„Sieh die herausgeputzte Puppe, ",
   "mn82:25.2": "ein Körper, aus Wunden zusammengesetzt, ",
   "mn82:25.3": "krank, lässt dir keine Ruhe, ",
-  "mn82:25.4": "und nichts an ihm hat Bestand. "
+  "mn82:25.4": "und nichts an ihm hat Bestand. ",
+  "mn82:25.5": "Sieh die herausgeputzte Gestalt "
 }
