Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -157,5 +157,6 @@
   "mn82:25.3": "krank, lässt dir keine Ruhe, ",
   "mn82:25.4": "und nichts an ihm hat Bestand. ",
   "mn82:25.5": "Sieh die herausgeputzte Gestalt ",
-  "mn82:25.6": "mit Edelsteinen und Ohrringen; "
+  "mn82:25.6": "mit Edelsteinen und Ohrringen; ",
+  "mn82:25.7": "nichts als Knochen, in Haut gewickelt, "
 }
