--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -158,5 +158,6 @@
   "mn82:25.4": "und nichts an ihm hat Bestand. ",
   "mn82:25.5": "Sieh die herausgeputzte Gestalt ",
   "mn82:25.6": "mit Edelsteinen und Ohrringen; ",
-  "mn82:25.7": "nichts als Knochen, in Haut gewickelt, "
+  "mn82:25.7": "nichts als Knochen, in Haut gewickelt, ",
+  "mn82:25.8": "durch die Kleider hübsch gemacht. "
 }
