--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -160,5 +160,6 @@
   "mn82:25.6": "mit Edelsteinen und Ohrringen; ",
   "mn82:25.7": "nichts als Knochen, in Haut gewickelt, ",
   "mn82:25.8": "durch die Kleider hübsch gemacht. ",
-  "mn82:25.9": "Rot gefärbte Füße "
+  "mn82:25.9": "Rot gefärbte Füße ",
+  "mn82:25.10": "und ein gepudertes Gesicht "
 }
