--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -162,5 +162,6 @@
   "mn82:25.8": "durch die Kleider hübsch gemacht. ",
   "mn82:25.9": "Rot gefärbte Füße ",
   "mn82:25.10": "und ein gepudertes Gesicht ",
-  "mn82:25.11": "reichen vielleicht, um einen Toren zu verlocken, "
+  "mn82:25.11": "reichen vielleicht, um einen Toren zu verlocken, ",
+  "mn82:25.12": "aber nicht einen, der zum anderen Ufer will. "
 }
