Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -168,5 +168,6 @@
   "mn82:25.14": "und Lidstrich ",
   "mn82:25.15": "reichen vielleicht, um einen Toren zu verlocken, ",
   "mn82:25.16": "aber nicht einen, der zum anderen Ufer will. ",
-  "mn82:25.17": "Ein verfaulender Körper, geschmückt "
+  "mn82:25.17": "Ein verfaulender Körper, geschmückt ",
+  "mn82:25.18": "wie ein frisch bemaltes Kosmetikkästchen, "
 }
