--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -171,5 +171,6 @@
   "mn82:25.17": "Ein verfaulender Körper, geschmückt ",
   "mn82:25.18": "wie ein frisch bemaltes Kosmetikkästchen, ",
   "mn82:25.19": "reicht vielleicht, um einen Toren zu verlocken, ",
-  "mn82:25.20": "aber nicht einen, der zum anderen Ufer will. "
+  "mn82:25.20": "aber nicht einen, der zum anderen Ufer will. ",
+  "mn82:25.21": "Der Jäger hat die Schlinge ausgelegt, "
 }
