Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -172,5 +172,6 @@
   "mn82:25.18": "wie ein frisch bemaltes Kosmetikkästchen, ",
   "mn82:25.19": "reicht vielleicht, um einen Toren zu verlocken, ",
   "mn82:25.20": "aber nicht einen, der zum anderen Ufer will. ",
-  "mn82:25.21": "Der Jäger hat die Schlinge ausgelegt, "
+  "mn82:25.21": "Der Jäger hat die Schlinge ausgelegt, ",
+  "mn82:25.22": "doch der Hirsch ist nicht in die Falle gegangen. "
 }
