--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -173,5 +173,6 @@
   "mn82:25.19": "reicht vielleicht, um einen Toren zu verlocken, ",
   "mn82:25.20": "aber nicht einen, der zum anderen Ufer will. ",
   "mn82:25.21": "Der Jäger hat die Schlinge ausgelegt, ",
-  "mn82:25.22": "doch der Hirsch ist nicht in die Falle gegangen. "
+  "mn82:25.22": "doch der Hirsch ist nicht in die Falle gegangen. ",
+  "mn82:25.23": "Ich habe den Köder gegessen, und nun gehe ich, "
 }
