Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -176,5 +176,6 @@
   "mn82:25.22": "doch der Hirsch ist nicht in die Falle gegangen. ",
   "mn82:25.23": "Ich habe den Köder gegessen, und nun gehe ich, ",
   "mn82:25.24": "lasse den Fallensteller jammernd zurück.“ ",
-  "mn82:26.1": "Und als er im Stehen diese Strophen aufgesagt hatte, ging Raṭṭhapāla zum Wildgehege des Königs Koravya und setzte sich an den Fuß eines Baumes, um den Tag über dort zu meditieren. "
+  "mn82:26.1": "Und als er im Stehen diese Strophen aufgesagt hatte, ging Raṭṭhapāla zum Wildgehege des Königs Koravya und setzte sich an den Fuß eines Baumes, um den Tag über dort zu meditieren. ",
+  "mn82:27.1": "Da wandte sich König Koravya an seinen Wildhüter: "
 }
