--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -178,5 +178,6 @@
   "mn82:25.24": "lasse den Fallensteller jammernd zurück.“ ",
   "mn82:26.1": "Und als er im Stehen diese Strophen aufgesagt hatte, ging Raṭṭhapāla zum Wildgehege des Königs Koravya und setzte sich an den Fuß eines Baumes, um den Tag über dort zu meditieren. ",
   "mn82:27.1": "Da wandte sich König Koravya an seinen Wildhüter: ",
-  "mn82:27.2": "„Mein guter Wildhüter, bringe den Park des Wildgeheges in Ordnung. "
+  "mn82:27.2": "„Mein guter Wildhüter, bringe den Park des Wildgeheges in Ordnung. ",
+  "mn82:27.3": "Wir wollen gehen, um die Landschaft zu betrachten.“ "
 }
