--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -180,5 +180,6 @@
   "mn82:27.1": "Da wandte sich König Koravya an seinen Wildhüter: ",
   "mn82:27.2": "„Mein guter Wildhüter, bringe den Park des Wildgeheges in Ordnung. ",
   "mn82:27.3": "Wir wollen gehen, um die Landschaft zu betrachten.“ ",
-  "mn82:27.4": "„Ja, Majestät“, antwortete der Wildhüter. Als er das Wildgehege in Ordnung brachte, sah er Raṭṭhapāla in seiner Meditation sitzen. "
+  "mn82:27.4": "„Ja, Majestät“, antwortete der Wildhüter. Als er das Wildgehege in Ordnung brachte, sah er Raṭṭhapāla in seiner Meditation sitzen. ",
+  "mn82:27.5": "Daraufhin ging er zum König und sagte: "
 }
