Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -181,5 +181,6 @@
   "mn82:27.2": "„Mein guter Wildhüter, bringe den Park des Wildgeheges in Ordnung. ",
   "mn82:27.3": "Wir wollen gehen, um die Landschaft zu betrachten.“ ",
   "mn82:27.4": "„Ja, Majestät“, antwortete der Wildhüter. Als er das Wildgehege in Ordnung brachte, sah er Raṭṭhapāla in seiner Meditation sitzen. ",
-  "mn82:27.5": "Daraufhin ging er zum König und sagte: "
+  "mn82:27.5": "Daraufhin ging er zum König und sagte: ",
+  "mn82:27.6": "„Das Wildgehege ist in Ordnung, Majestät. "
 }
