--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -183,5 +183,6 @@
   "mn82:27.4": "„Ja, Majestät“, antwortete der Wildhüter. Als er das Wildgehege in Ordnung brachte, sah er Raṭṭhapāla in seiner Meditation sitzen. ",
   "mn82:27.5": "Daraufhin ging er zum König und sagte: ",
   "mn82:27.6": "„Das Wildgehege ist in Ordnung, Majestät. ",
-  "mn82:27.7": "Und der ehrbare Mann mit Namen Raṭṭhapāla, der Sohn des führenden Stammes in Thullakoṭṭhita, von dem du oft so lobend gesprochen hast, meditiert dort am Fuß eines Baumes.“ "
+  "mn82:27.7": "Und der ehrbare Mann mit Namen Raṭṭhapāla, der Sohn des führenden Stammes in Thullakoṭṭhita, von dem du oft so lobend gesprochen hast, meditiert dort am Fuß eines Baumes.“ ",
+  "mn82:27.8": "„Nun, mein guter Wildhüter, das genügt für heute mit dem Park. "
 }
