--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -185,5 +185,6 @@
   "mn82:27.6": "„Das Wildgehege ist in Ordnung, Majestät. ",
   "mn82:27.7": "Und der ehrbare Mann mit Namen Raṭṭhapāla, der Sohn des führenden Stammes in Thullakoṭṭhita, von dem du oft so lobend gesprochen hast, meditiert dort am Fuß eines Baumes.“ ",
   "mn82:27.8": "„Nun, mein guter Wildhüter, das genügt für heute mit dem Park. ",
-  "mn82:27.9": "Nun will ich dem Meister Raṭṭhapāla meine Aufwartung machen.“ "
+  "mn82:27.9": "Nun will ich dem Meister Raṭṭhapāla meine Aufwartung machen.“ ",
+  "mn82:28.1": "Darauf sagte König Koravya: „Gebt die frischen und gekochten Speisen weg, die da zubereitet wurden.“ Er ließ die erlesensten Kutschen anspannen. Dann bestieg er eine erlesene Kutsche und machte sich zusammen mit anderen erlesenen Kutschen in vollem königlichem Prunk von Thullakoṭṭhita auf, um den Ehrwürdigen Raṭṭhapāla zu sehen. "
 }
