Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -190,5 +190,6 @@
   "mn82:28.2": "Er fuhr mit der Kutsche, soweit es das Gelände erlaubte, stieg dann ab, begab sich zusammen mit einer Gruppe hochrangiger Beamter zu Fuß zu Raṭṭhapāla und tauschte Willkommensgrüße mit ihm aus. Nach der Begrüßung und dem Austausch von Höflichkeiten stellte er sich zur Seite hin und sagte zu Raṭṭhapāla: ",
   "mn82:28.3": "„Hier, Meister Raṭṭhapāla, setz dich auf diese Elefantendecke.“ ",
   "mn82:28.4": "„Genug, großer König, setz du dich darauf. ",
-  "mn82:28.5": "Ich sitze auf meinem eigenen Sitz.“ "
+  "mn82:28.5": "Ich sitze auf meinem eigenen Sitz.“ ",
+  "mn82:28.6": "Da setzte sich der König auf den ausgebreiteten Sitz und sagte: "
 }
