--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -192,5 +192,6 @@
   "mn82:28.4": "„Genug, großer König, setz du dich darauf. ",
   "mn82:28.5": "Ich sitze auf meinem eigenen Sitz.“ ",
   "mn82:28.6": "Da setzte sich der König auf den ausgebreiteten Sitz und sagte: ",
-  "mn82:29.1": "„Meister Raṭṭhapāla, es gibt vier Arten von Verfall. Ihretwegen rasieren sich manche Menschen Haar und Bart, legen ockerfarbene Roben an und ziehen aus dem Haus fort ins hauslose Leben. "
+  "mn82:29.1": "„Meister Raṭṭhapāla, es gibt vier Arten von Verfall. Ihretwegen rasieren sich manche Menschen Haar und Bart, legen ockerfarbene Roben an und ziehen aus dem Haus fort ins hauslose Leben. ",
+  "mn82:29.2": "Welche vier? "
 }
