--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -193,5 +193,6 @@
   "mn82:28.5": "Ich sitze auf meinem eigenen Sitz.“ ",
   "mn82:28.6": "Da setzte sich der König auf den ausgebreiteten Sitz und sagte: ",
   "mn82:29.1": "„Meister Raṭṭhapāla, es gibt vier Arten von Verfall. Ihretwegen rasieren sich manche Menschen Haar und Bart, legen ockerfarbene Roben an und ziehen aus dem Haus fort ins hauslose Leben. ",
-  "mn82:29.2": "Welche vier? "
+  "mn82:29.2": "Welche vier? ",
+  "mn82:29.3": "Verfall durch Alter, Verfall durch Krankheit, Verfall von Vermögen und Verfall von Verwandten. "
 }
