--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -194,5 +194,6 @@
   "mn82:28.6": "Da setzte sich der König auf den ausgebreiteten Sitz und sagte: ",
   "mn82:29.1": "„Meister Raṭṭhapāla, es gibt vier Arten von Verfall. Ihretwegen rasieren sich manche Menschen Haar und Bart, legen ockerfarbene Roben an und ziehen aus dem Haus fort ins hauslose Leben. ",
   "mn82:29.2": "Welche vier? ",
-  "mn82:29.3": "Verfall durch Alter, Verfall durch Krankheit, Verfall von Vermögen und Verfall von Verwandten. "
+  "mn82:29.3": "Verfall durch Alter, Verfall durch Krankheit, Verfall von Vermögen und Verfall von Verwandten. ",
+  "mn82:30.1": "Und was ist Verfall durch Alter? "
 }
