--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -195,5 +195,6 @@
   "mn82:29.1": "„Meister Raṭṭhapāla, es gibt vier Arten von Verfall. Ihretwegen rasieren sich manche Menschen Haar und Bart, legen ockerfarbene Roben an und ziehen aus dem Haus fort ins hauslose Leben. ",
   "mn82:29.2": "Welche vier? ",
   "mn82:29.3": "Verfall durch Alter, Verfall durch Krankheit, Verfall von Vermögen und Verfall von Verwandten. ",
-  "mn82:30.1": "Und was ist Verfall durch Alter? "
+  "mn82:30.1": "Und was ist Verfall durch Alter? ",
+  "mn82:30.2": "Da ist jemand alt, bejahrt und hochbetagt, in vorgerücktem Alter und im letzten Lebensabschnitt angekommen. "
 }
