--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -197,5 +197,6 @@
   "mn82:29.3": "Verfall durch Alter, Verfall durch Krankheit, Verfall von Vermögen und Verfall von Verwandten. ",
   "mn82:30.1": "Und was ist Verfall durch Alter? ",
   "mn82:30.2": "Da ist jemand alt, bejahrt und hochbetagt, in vorgerücktem Alter und im letzten Lebensabschnitt angekommen. ",
-  "mn82:30.3": "Er überlegt: "
+  "mn82:30.3": "Er überlegt: ",
+  "mn82:30.4": "‚Ich bin jetzt alt, bejahrt und hochbetagt. Ich bin in vorgerücktem Alter und im letzten Lebensabschnitt angekommen. "
 }
