Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -198,5 +198,6 @@
   "mn82:30.1": "Und was ist Verfall durch Alter? ",
   "mn82:30.2": "Da ist jemand alt, bejahrt und hochbetagt, in vorgerücktem Alter und im letzten Lebensabschnitt angekommen. ",
   "mn82:30.3": "Er überlegt: ",
-  "mn82:30.4": "‚Ich bin jetzt alt, bejahrt und hochbetagt. Ich bin in vorgerücktem Alter und im letzten Lebensabschnitt angekommen. "
+  "mn82:30.4": "‚Ich bin jetzt alt, bejahrt und hochbetagt. Ich bin in vorgerücktem Alter und im letzten Lebensabschnitt angekommen. ",
+  "mn82:30.5": "Es ist nicht leicht für mich, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. "
 }
