--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -200,5 +200,6 @@
   "mn82:30.3": "Er überlegt: ",
   "mn82:30.4": "‚Ich bin jetzt alt, bejahrt und hochbetagt. Ich bin in vorgerücktem Alter und im letzten Lebensabschnitt angekommen. ",
   "mn82:30.5": "Es ist nicht leicht für mich, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
-  "mn82:30.6": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?‘ "
+  "mn82:30.6": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?‘ ",
+  "mn82:30.7": "So zieht er fort wegen des Verfalls durch Alter. "
 }
