--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -202,5 +202,6 @@
   "mn82:30.5": "Es ist nicht leicht für mich, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
   "mn82:30.6": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?‘ ",
   "mn82:30.7": "So zieht er fort wegen des Verfalls durch Alter. ",
-  "mn82:30.8": "Das nennt man Verfall durch Alter. "
+  "mn82:30.8": "Das nennt man Verfall durch Alter. ",
+  "mn82:30.9": "Aber Meister Raṭṭhapāla ist jetzt ein junger Mensch, jung, mit makellos schwarzem Haar, von Jugend gesegnet, in der Blüte des Lebens. "
 }
