Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -204,5 +204,6 @@
   "mn82:30.7": "So zieht er fort wegen des Verfalls durch Alter. ",
   "mn82:30.8": "Das nennt man Verfall durch Alter. ",
   "mn82:30.9": "Aber Meister Raṭṭhapāla ist jetzt ein junger Mensch, jung, mit makellos schwarzem Haar, von Jugend gesegnet, in der Blüte des Lebens. ",
-  "mn82:30.10": "Du bist nicht durch Alter verfallen. "
+  "mn82:30.10": "Du bist nicht durch Alter verfallen. ",
+  "mn82:30.11": "Was hast du also erkannt oder gesehen oder gehört, das dich zum Fortziehen bewog? "
 }
