Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -206,5 +206,6 @@
   "mn82:30.9": "Aber Meister Raṭṭhapāla ist jetzt ein junger Mensch, jung, mit makellos schwarzem Haar, von Jugend gesegnet, in der Blüte des Lebens. ",
   "mn82:30.10": "Du bist nicht durch Alter verfallen. ",
   "mn82:30.11": "Was hast du also erkannt oder gesehen oder gehört, das dich zum Fortziehen bewog? ",
-  "mn82:31.1": "Und was ist Verfall durch Krankheit? "
+  "mn82:31.1": "Und was ist Verfall durch Krankheit? ",
+  "mn82:31.2": "Da ist jemand mitgenommen, leidend, schwer krank. "
 }
