--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -207,5 +207,6 @@
   "mn82:30.10": "Du bist nicht durch Alter verfallen. ",
   "mn82:30.11": "Was hast du also erkannt oder gesehen oder gehört, das dich zum Fortziehen bewog? ",
   "mn82:31.1": "Und was ist Verfall durch Krankheit? ",
-  "mn82:31.2": "Da ist jemand mitgenommen, leidend, schwer krank. "
+  "mn82:31.2": "Da ist jemand mitgenommen, leidend, schwer krank. ",
+  "mn82:31.3": "Er überlegt: "
 }
