Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -210,5 +210,6 @@
   "mn82:31.2": "Da ist jemand mitgenommen, leidend, schwer krank. ",
   "mn82:31.3": "Er überlegt: ",
   "mn82:31.4": "Ich bin jetzt mitgenommen, leidend, schwer krank. ",
-  "mn82:31.5": "Es ist nicht leicht für mich, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. "
+  "mn82:31.5": "Es ist nicht leicht für mich, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
+  "mn82:31.6": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?‘ "
 }
