--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -214,5 +214,6 @@
   "mn82:31.6": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?‘ ",
   "mn82:31.7": "So zieht er fort wegen des Verfalls durch Krankheit. ",
   "mn82:31.8": "Das nennt man Verfall durch Krankheit. ",
-  "mn82:31.9": "Aber Meister Raṭṭhapāla ist jetzt selten krank oder unwohl. Dein Magen verdaut gut, ist weder zu heiß noch zu kalt. "
+  "mn82:31.9": "Aber Meister Raṭṭhapāla ist jetzt selten krank oder unwohl. Dein Magen verdaut gut, ist weder zu heiß noch zu kalt. ",
+  "mn82:31.10": "Du bist nicht durch Krankheit verfallen. "
 }
