--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -217,5 +217,6 @@
   "mn82:31.9": "Aber Meister Raṭṭhapāla ist jetzt selten krank oder unwohl. Dein Magen verdaut gut, ist weder zu heiß noch zu kalt. ",
   "mn82:31.10": "Du bist nicht durch Krankheit verfallen. ",
   "mn82:31.11": "Was hast du also erkannt oder gesehen oder gehört, das dich zum Fortziehen bewog? ",
-  "mn82:32.1": "Und was ist Verfall von Vermögen? "
+  "mn82:32.1": "Und was ist Verfall von Vermögen? ",
+  "mn82:32.2": "Da ist  jemand reich, wohlhabend und vermögend. "
 }
