Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -220,5 +220,6 @@
   "mn82:32.1": "Und was ist Verfall von Vermögen? ",
   "mn82:32.2": "Da ist  jemand reich, wohlhabend und vermögend. ",
   "mn82:32.3": "Aber allmählich schwindet sein Vermögen dahin. ",
-  "mn82:32.4": "Er überlegt: "
+  "mn82:32.4": "Er überlegt: ",
+  "mn82:32.5": "‚Früher war ich reich, wohlhabend und vermögend. "
 }
