--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -222,5 +222,6 @@
   "mn82:32.3": "Aber allmählich schwindet sein Vermögen dahin. ",
   "mn82:32.4": "Er überlegt: ",
   "mn82:32.5": "‚Früher war ich reich, wohlhabend und vermögend. ",
-  "mn82:32.6": "Aber allmählich schwand mein Vermögen dahin. "
+  "mn82:32.6": "Aber allmählich schwand mein Vermögen dahin. ",
+  "mn82:32.7": "Es ist nicht leicht für mich, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. "
 }
