--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -224,5 +224,6 @@
   "mn82:32.5": "‚Früher war ich reich, wohlhabend und vermögend. ",
   "mn82:32.6": "Aber allmählich schwand mein Vermögen dahin. ",
   "mn82:32.7": "Es ist nicht leicht für mich, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
-  "mn82:32.8": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?‘ "
+  "mn82:32.8": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?‘ ",
+  "mn82:32.9": "So zieht er fort wegen des Verfalls von Vermögen. "
 }
