--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -226,5 +226,6 @@
   "mn82:32.7": "Es ist nicht leicht für mich, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
   "mn82:32.8": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?‘ ",
   "mn82:32.9": "So zieht er fort wegen des Verfalls von Vermögen. ",
-  "mn82:32.10": "Das nennt man Verfall von Vermögen. "
+  "mn82:32.10": "Das nennt man Verfall von Vermögen. ",
+  "mn82:32.11": "Aber Meister Raṭṭhapāla ist der Sohn des führenden Stammes hier in Thullakoṭṭhita. "
 }
