Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -229,5 +229,6 @@
   "mn82:32.10": "Das nennt man Verfall von Vermögen. ",
   "mn82:32.11": "Aber Meister Raṭṭhapāla ist der Sohn des führenden Stammes hier in Thullakoṭṭhita. ",
   "mn82:32.12": "Dein Vermögen ist nicht verfallen. ",
-  "mn82:32.13": "Was hast du also erkannt oder gesehen oder gehört, das dich zum Fortziehen bewog? "
+  "mn82:32.13": "Was hast du also erkannt oder gesehen oder gehört, das dich zum Fortziehen bewog? ",
+  "mn82:33.1": "Und was ist Verfall von Verwandten? "
 }
