Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -230,6 +230,6 @@
   "mn82:32.11": "Aber Meister Raṭṭhapāla ist der Sohn des führenden Stammes hier in Thullakoṭṭhita. ",
   "mn82:32.12": "Dein Vermögen ist nicht verfallen. ",
   "mn82:32.13": "Was hast du also erkannt oder gesehen oder gehört, das dich zum Fortziehen bewog? ",
-  "mn82:33.1": "Und was ist Verfall von Verwandten? ",
+  "mn82:33.1": "Und was ist Verfall von Angehörigen? ",
   "mn82:33.2": "Da hat jemand viele Freunde und Kollegen, Verwandte und Sippenangehörige. "
 }
