Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -234,5 +234,6 @@
   "mn82:33.2": "Da hat jemand viele Freunde und Kollegen, Verwandte und Sippenangehörige. ",
   "mn82:33.3": "Aber allmählich schwinden seine Angehörigen dahin. ",
   "mn82:33.4": "Er überlegt: ",
-  "mn82:33.5": "‚Früher hatte ich viele Freunde und Kollegen, Verwandte und Sippenangehörige. "
+  "mn82:33.5": "‚Früher hatte ich viele Freunde und Kollegen, Verwandte und Sippenangehörige. ",
+  "mn82:33.6": "Aber allmählich schwanden meine Angehörigen dahin. "
 }
