--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -237,5 +237,6 @@
   "mn82:33.5": "‚Früher hatte ich viele Freunde und Kollegen, Verwandte und Sippenangehörige. ",
   "mn82:33.6": "Aber allmählich schwanden meine Angehörigen dahin. ",
   "mn82:33.7": "Es ist nicht leicht für mich, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
-  "mn82:33.8": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?‘ "
+  "mn82:33.8": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?‘ ",
+  "mn82:33.9": "So zieht er fort wegen des Verfalls von Angehörigen. "
 }
