Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -239,5 +239,6 @@
   "mn82:33.7": "Es ist nicht leicht für mich, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
   "mn82:33.8": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?‘ ",
   "mn82:33.9": "So zieht er fort wegen des Verfalls von Angehörigen. ",
-  "mn82:33.10": "Das nennt man Verfall von Angehörigen. "
+  "mn82:33.10": "Das nennt man Verfall von Angehörigen. ",
+  "mn82:33.11": "Aber Meister Raṭṭhapāla viele Freunde und Kollegen, Verwandte und Sippenangehörige hier in Thullakoṭṭhita. "
 }
