Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -241,5 +241,6 @@
   "mn82:33.9": "So zieht er fort wegen des Verfalls von Angehörigen. ",
   "mn82:33.10": "Das nennt man Verfall von Angehörigen. ",
   "mn82:33.11": "Aber Meister Raṭṭhapāla viele Freunde und Kollegen, Verwandte und Sippenangehörige hier in Thullakoṭṭhita. ",
-  "mn82:33.12": "Deine Angehörigen sind nicht verfallen. "
+  "mn82:33.12": "Deine Angehörigen sind nicht verfallen. ",
+  "mn82:33.13": "Was hast du also erkannt oder gesehen oder gehört, das dich zum Fortziehen bewog? "
 }
