--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -242,5 +242,6 @@
   "mn82:33.10": "Das nennt man Verfall von Angehörigen. ",
   "mn82:33.11": "Aber Meister Raṭṭhapāla viele Freunde und Kollegen, Verwandte und Sippenangehörige hier in Thullakoṭṭhita. ",
   "mn82:33.12": "Deine Angehörigen sind nicht verfallen. ",
-  "mn82:33.13": "Was hast du also erkannt oder gesehen oder gehört, das dich zum Fortziehen bewog? "
+  "mn82:33.13": "Was hast du also erkannt oder gesehen oder gehört, das dich zum Fortziehen bewog? ",
+  "mn82:34.1": "Das sind die vier Arten von Verfall. Ihretwegen rasieren sich manche Menschen Haar und Bart, legen ockerfarbene Roben an und ziehen aus dem Haus fort ins hauslose Leben. "
 }
