Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -244,5 +244,6 @@
   "mn82:33.12": "Deine Angehörigen sind nicht verfallen. ",
   "mn82:33.13": "Was hast du also erkannt oder gesehen oder gehört, das dich zum Fortziehen bewog? ",
   "mn82:34.1": "Das sind die vier Arten von Verfall. Ihretwegen rasieren sich manche Menschen Haar und Bart, legen ockerfarbene Roben an und ziehen aus dem Haus fort ins hauslose Leben. ",
-  "mn82:34.2": "Keine davon trifft auf Meister Raṭṭhapāla zu. "
+  "mn82:34.2": "Keine davon trifft auf Meister Raṭṭhapāla zu. ",
+  "mn82:34.3": "Was hast du also erkannt oder gesehen oder gehört, das dich zum Fortziehen bewog?“ "
 }
