Translations by sujato to translation/en/sujato/sutta/mn/mn78_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn78_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn78_translation-en-sujato.json
@@ -107,7 +107,7 @@
   "mn78:11.9": "But skillful behaviors stem from a mind that is free from greed, hate, and delusion. ",
   "mn78:11.10": "And where do these skillful behaviors cease without anything left over? ",
   "mn78:11.11": "Their cessation has also been stated. ",
-  "mn78:11.12": "It’s when a mendicant behaves ethically, but they don’t identify with their ethical behavior. ",
+  "mn78:11.12": "It’s when a mendicant behaves ethically, but they are not determined by ethical behavior. ",
   "mn78:11.13": "And they truly understand the freedom of heart and freedom by wisdom where these skillful behaviors cease without anything left over. ",
   "mn78:11.14": "And how is someone practicing for the cessation of skillful behaviors? ",
   "mn78:11.15": "It’s when a mendicant generates enthusiasm, tries, makes an effort, exerts the mind, and strives so that bad, unskillful qualities don’t arise … ",
