--- a/translation/en/sujato/sutta/mn/mn78_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn78_translation-en-sujato.json
@@ -1,6 +1,6 @@
 {
   "mn78:0.1": "Middle Discourses 78 ",
-  "mn78:0.2": "With Uggāhamāna Samaṇamuṇḍika ",
+  "mn78:0.2": "With Uggāhamāna Samaṇamaṇḍikāputta ",
   "mn78:1.1": "So I have heard. ",
   "mn78:1.2": "At one time the Buddha was staying near Sāvatthī in Jeta’s Grove, Anāthapiṇḍika’s monastery. ",
   "mn78:1.3": "Now at that time the wanderer Uggāhamāna Samaṇamuṇḍikāputta was residing together with around three hundred wanderers in Mallikā’s single-halled monastery for philosophical debates, hedged by pale-moon ebony trees. ",
