Translations by sujato to translation/en/sujato/sutta/mn/mn78_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn78_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn78_translation-en-sujato.json
@@ -37,7 +37,7 @@
   "mn78:8.2": "“Master builder, if what Uggāhamāna says is true, a little baby boy is an invincible ascetic—accomplished in the skillful, excelling in the skillful, attained to the highest attainment. ",
   "mn78:8.3": "For a little baby doesn’t even have a concept of ‘a body’, so how could they possibly do a bad deed with their body, aside from just wriggling? ",
   "mn78:8.4": "And a little baby doesn’t even have a concept of ‘speech’, so how could they possibly speak bad words, aside from just crying? ",
-  "mn78:8.5": "And a little baby doesn’t even have a concept of ‘thought’, so how could they possibly think bad thoughts, apart from just whimpering? ",
+  "mn78:8.5": "And a little baby doesn’t even have a concept of ‘thought’, so how could they possibly think bad thoughts, aside from just whimpering? ",
   "mn78:8.6": "And a little baby doesn’t even have a concept of ‘livelihood’, so how could they possibly earn a living by bad livelihood, apart from their mother’s breast? ",
   "mn78:8.7": "If what Uggāhamāna says is true, a little baby boy is an invincible ascetic—accomplished in the skillful, excelling in the skillful, attained to the highest attainment. ",
   "mn78:8.8": "When an individual has four qualities I describe them, not as an invincible ascetic—accomplished in the skillful, excelling in the skillful, attained to the highest attainment—but as having achieved the same level as a little baby. ",
