--- a/translation/en/sujato/sutta/mn/mn78_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn78_translation-en-sujato.json
@@ -45,7 +45,7 @@
   "mn78:8.10": "It’s when they do no bad deeds with their body; speak no bad words; think no bad thoughts; and don’t earn a living by bad livelihood. ",
   "mn78:8.11": "When an individual has these four qualities I describe them, not as an invincible ascetic, but as having achieved the same level as a little baby. ",
   "mn78:9.1": "When an individual has ten qualities, master builder, I describe them as an invincible ascetic—accomplished in the skillful, excelling in the skillful, attained to the highest attainment. ",
-  "mn78:9.2": "But certain things must first be understood, I say. ‘These are unskillful behaviors.’ ",
+  "mn78:9.2": "But the following things must first be understood, I say. ‘These are unskillful behaviors.’ ",
   "mn78:9.3": "",
   "mn78:9.4": "‘Unskillful behaviors stem from this.’ ",
   "mn78:9.5": "",
