Translations by sujato to translation/en/sujato/sutta/mn/mn23_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn23_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn23_translation-en-sujato.json
@@ -93,7 +93,7 @@
   "mn23:4.30": "Smells known by the nose … ",
   "mn23:4.31": "Tastes known by the tongue … ",
   "mn23:4.32": "Touches known by the body that are likable, desirable, agreeable, pleasant, sensual, and arousing. ",
-  "mn23:4.33": "‘Throw out the butcher’s knife and chopping block’ means ‘give up the five kinds of sensual stimulation’ … ",
+  "mn23:4.33": "‘Throw out the butcher’s knife and chopping board’ means ‘give up the five kinds of sensual stimulation’ … ",
   "mn23:4.34": "",
   "mn23:4.35": "‘Scrap of meat’ is a term for greed and relishing. ",
   "mn23:4.36": "‘Throw out the scrap of meat’ means ‘give up greed and relishing’ … ",
