Translations by sujato to translation/en/sujato/sutta/an/an5/an5.76_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an5/an5.76_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an5/an5.76_translation-en-sujato.json
@@ -79,7 +79,7 @@
   "an5.76:11.7": "a dream … ",
   "an5.76:11.8": "borrowed goods … ",
   "an5.76:11.9": "fruit on a tree … ",
-  "an5.76:11.10": "a butcher’s knife and chopping block … ",
+  "an5.76:11.10": "a butcher’s knife and chopping board … ",
   "an5.76:11.11": "a staking sword … ",
   "an5.76:11.12": "a snake’s head, the Buddha says that sensual pleasures give little gratification and much suffering and distress, and they are all the more full of drawbacks. ",
   "an5.76:11.13": "Be happy with the spiritual life. ",
