--- a/translation/en/sujato/sutta/kn/thig/thig16.1_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/thig/thig16.1_translation-en-sujato.json
@@ -162,7 +162,7 @@
   "thig16.1:40.2": "all over the ten directions, ",
   "thig16.1:40.3": "there would be no sating of sensual pleasures: ",
   "thig16.1:40.4": "people die insatiable. ",
-  "thig16.1:41.1": "Like a butcher’s knife and chopping block, ",
+  "thig16.1:41.1": "Like a butcher’s knife and chopping board, ",
   "thig16.1:41.2": "sensual pleasures are like a snake’s head. ",
   "thig16.1:41.3": "They burn like a fire-brand, ",
   "thig16.1:41.4": "they resemble a skeleton. ",
