--- a/translation/en/sujato/sutta/mn/mn22_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn22_translation-en-sujato.json
@@ -67,7 +67,7 @@
   "mn22:6.8": "a dream … ",
   "mn22:6.9": "borrowed goods … ",
   "mn22:6.10": "fruit on a tree … ",
-  "mn22:6.11": "a butcher’s knife and chopping block … ",
+  "mn22:6.11": "a butcher’s knife and chopping board … ",
   "mn22:6.12": "a staking sword … ",
   "mn22:6.13": "a snake’s head, I’ve said that sensual pleasures give little gratification and much suffering and distress, and they are all the more full of drawbacks. ",
   "mn22:6.14": "But still you misrepresent me by your wrong grasp, harm yourself, and create much wickedness. ",
