--- a/translation/en/sujato/sutta/mn/mn23_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn23_translation-en-sujato.json
@@ -36,7 +36,7 @@
   "mn23:2.29": "Taking up the sword and digging, the clever one saw a butcher’s knife and chopping block: ",
   "mn23:2.30": "‘A butcher’s knife and chopping board, sir!’ ",
   "mn23:2.31": "The brahmin said, ",
-  "mn23:2.32": "‘Throw out the butcher’s knife and chopping block! ",
+  "mn23:2.32": "‘Throw out the butcher’s knife and chopping board! ",
   "mn23:2.33": "Dig, clever one, having taken up the sword!’ ",
   "mn23:2.34": "Taking up the sword and digging, the clever one saw a scrap of meat: ",
   "mn23:2.35": "‘A scrap of meat, sir!’ ",
