Translations by sujato to translation/en/sujato/sutta/mn/mn23_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn23_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn23_translation-en-sujato.json
@@ -87,7 +87,7 @@
   "mn23:4.24": "form, feeling, perception, choices, and consciousness. ",
   "mn23:4.25": "‘Throw out the tortoise’ means ‘give up the five grasping aggregates’ … ",
   "mn23:4.26": "",
-  "mn23:4.27": "‘Butcher’s knife and chopping block’ is a term for the five kinds of sensual stimulation. ",
+  "mn23:4.27": "‘Butcher’s knife and chopping board’ is a term for the five kinds of sensual stimulation. ",
   "mn23:4.28": "Sights known by the eye that are likable, desirable, agreeable, pleasant, sensual, and arousing. ",
   "mn23:4.29": "Sounds known by the ear … ",
   "mn23:4.30": "Smells known by the nose … ",
