--- a/translation/de/sabbamitta/sutta/kn/thag/thag16.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag16.4_translation-de-sabbamitta.json
@@ -24,7 +24,7 @@
   "thag16.4:5.3": "reicht vielleicht, um einen Toren zu verlocken, ",
   "thag16.4:5.4": "aber nicht einen, der zum anderen Ufer will. ",
   "thag16.4:6.1": "Der Jäger legte die Schlinge aus, ",
-  "thag16.4:6.2": "doch der Hirsch ist nicht in die Falle gegangen. ",
+  "thag16.4:6.2": "doch der Hirsch sprang nicht in die Falle. ",
   "thag16.4:6.3": "Ich habe den Köder gegessen, und nun gehe ich, ",
   "thag16.4:6.4": "lasse den Fallensteller jammernd zurück. ",
   "thag16.4:7.1": "Die Falle des Jägers ist zerbrochen, ",
