Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -49,7 +49,7 @@
   "sn35.116:8.16": "Der Buddha hat diesen kurzen Merksatz zum Aufsagen vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären: ",
   "sn35.116:8.17": "‚Mönche und Nonnen, ich sage, es ist nicht möglich, durch Gehen das Ende der Welt zu erkennen oder zu sehen oder zu erreichen. ",
   "sn35.116:8.18": "Aber ich sage auch, dass es nicht möglich ist, dem Leiden ein Ende zu machen, ohne ans Ende der Welt zu gelangen.‘ ",
-  "sn35.116:8.19": "So verstehe ich die ausführliche Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde. ",
+  "sn35.116:8.19": "So verstehe ich die ausführliche Bedeutung dieses kurzen Merksatzes zum Aufsagen, der vom Buddha vorgestellt wurde. ",
   "sn35.116:8.20": "Wenn ihr wollt, geht zum Buddha und fragt ihn danach. ",
   "sn35.116:8.21": "So wie er es erklärt, sollt ihr es behalten.“ ",
   "sn35.116:9.1": "„Ja, Geehrter“, antworteten jene Mönche und Nonnen. Sie erhoben sich von ihren Sitzen und gingen zum Buddha, verbeugten sich, setzten sich zur Seite hin und berichteten ihm die Unterredung mit Ānanda. Dann sagten sie: ",
