Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "an10.172:2.3": "‚Ihr solltet schlechte Grundsätze und gute Grundsätze kennen, ",
   "an10.172:2.4": "und ihr solltet schlechte Ergebnisse und gute Ergebnisse kennen. ",
   "an10.172:2.5": "Wenn ihr diese Dinge kennt, sollte eure Übung den guten Grundsätzen folgen, die zu guten Ergebnissen führen.‘ ",
-  "an10.172:2.6": "Wer kann die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären?“ ",
+  "an10.172:2.6": "Wer kann die Bedeutung dieses kurzen Merksatzes zum Aufsagen, der vom Buddha vorgestellt wurde, ausführlich erklären?“ ",
   "an10.172:3.1": "Dann überlegten sie: ",
   "an10.172:3.2": "„Dieser Ehrwürdige Mahākaccāna wird vom Buddha gepriesen und von seinen vernünftigen geistlichen Gefährten geschätzt. ",
   "an10.172:3.3": "Er kann die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären. ",
