Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json
@@ -30,7 +30,7 @@
   "an10.172:9.2": "Das wäre die Zeit gewesen, uns zum Buddha zu begeben und ihn zu der Sache zu befragen. ",
   "an10.172:9.3": "So wie er es erklärt hätte, hätten wir es behalten sollen. ",
   "an10.172:9.4": "Dennoch wird der Ehrwürdige Mahākaccāna vom Buddha gepriesen und von seinen vernünftigen geistlichen Gefährten geschätzt. ",
-  "an10.172:9.5": "Er kann die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären. ",
+  "an10.172:9.5": "Er kann die Bedeutung dieses kurzen Merksatzes zum Aufsagen, der vom Buddha vorgestellt wurde, ausführlich erklären. ",
   "an10.172:9.6": "Bitte erkläre es, wenn es dir nichts ausmacht.“ ",
   "an10.172:10.1": "„Nun denn, Geehrte, hört zu und gebraucht den Geist gut, ich werde sprechen.“ ",
   "an10.172:10.2": "„Ja, Geehrter“, antworteten sie. ",
