Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an10/an10.28_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an10/an10.28_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.28_translation-de-sabbamitta.json
@@ -43,7 +43,7 @@
   "an10.28:8.4": "Welche neun Dinge? ",
   "an10.28:8.5": "Die neun Wohnplätze der Lebewesen. ",
   "an10.28:8.6": "Wenn er in Bezug auf diese neun Dinge vollständig ernüchtert wird, wenn die Leidenschaft schwindet und er davon befreit ist, wenn er ihre Grenzen sieht und ihre Bedeutung vollständig erfasst, macht ein Mönch dem Leiden in diesem Leben ein Ende. ",
-  "an10.28:9.1": "‚Zehn Dinge: Frage, Merksatz und Antwort.‘ Das hat der Buddha gesagt, ",
+  "an10.28:9.1": "‚Zehn Dinge: Frage, Merksatz zum Aufsagen und Antwort.‘ Das hat der Buddha gesagt, ",
   "an10.28:9.2": "aber inwiefern hat er es gesagt? ",
   "an10.28:9.3": "Mit einem Geist, der bei zehn Dingen gut entwickelt ist, der ihre Grenzen sieht und ihre Bedeutung vollständig erfasst, macht ein Mönch dem Leiden in diesem Leben ein Ende. ",
   "an10.28:9.4": "Welche zehn Dinge? ",
