Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -248,5 +248,6 @@
   "mn82:34.3": "Was hast du also erkannt oder gesehen oder gehört, das dich zum Fortziehen bewog?“ ",
   "mn82:35.1": "„Großer König, der Gesegnete, der erkennt und sieht, der Vollendete, der vollkommen erwachte Buddha hat vier Merksätze der Lehre zum Aufsagen gelehrt. Nachdem ich diese Merksätze der Lehre zum Aufsagen erkannt und gesehen und gehört hatte, zog ich aus dem Haus fort ins hauslose Leben. ",
   "mn82:35.2": "Welche vier? ",
-  "mn82:36.1": "‚Die Welt ist brüchig und wird fortgerissen.‘ "
+  "mn82:36.1": "‚Die Welt ist brüchig und wird fortgerissen.‘ ",
+  "mn82:36.2": "Das ist der erste Merksatz. "
 }
