Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -252,5 +252,6 @@
   "mn82:36.2": "Das ist der erste Merksatz. ",
   "mn82:36.3": "‚Die Welt hat keinen Schutz und keinen Retter.‘ ",
   "mn82:36.4": "Das ist der zweite Merksatz. ",
-  "mn82:36.5": "‚Die Welt hat keinen Besitzer – man muss alles zurücklassen und weiterziehen.‘ "
+  "mn82:36.5": "‚Die Welt hat keinen Besitzer – man muss alles zurücklassen und weiterziehen.‘ ",
+  "mn82:36.6": "Das ist der dritte Merksatz. "
 }
