Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -255,5 +255,6 @@
   "mn82:36.5": "‚Die Welt hat keinen Besitzer – man muss alles zurücklassen und weiterziehen.‘ ",
   "mn82:36.6": "Das ist der dritte Merksatz. ",
   "mn82:36.7": "‚Die Welt ist voller Wollen, unersättlich, der Sklave des Verlangens.‘ ",
-  "mn82:36.8": "Das ist der vierte Merksatz. "
+  "mn82:36.8": "Das ist der vierte Merksatz. ",
+  "mn82:37.1": "Der Gesegnete, der erkennt und sieht, der Vollendete, der vollkommen erwachte Buddha hat diese vier Merksätze der Lehre zum Aufsagen gelehrt. Nachdem ich diese Merksätze der Lehre zum Aufsagen erkannt und gesehen und gehört hatte, zog ich aus dem Haus fort ins hauslose Leben.“ "
 }
