Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -260,5 +260,6 @@
   "mn82:38.1": "„‚Die Welt ist brüchig und wird fortgerissen.‘ ",
   "mn82:38.2": "Das sagte Meister Raṭṭhapāla. ",
   "mn82:38.3": "Wie ist da die Bedeutung dieser Aussage zu sehen?“ ",
-  "mn82:38.4": "„Was denkst du, großer König? "
+  "mn82:38.4": "„Was denkst du, großer König? ",
+  "mn82:38.5": "Als du zwanzig oder fünfundzwanzig Jahr alt warst, warst du da erprobt im Elefanten- und Pferdereiten, Streitwagenfahren, Bogenschießen und Schwertkampf? Hattest du starke Schenkel und Arme, warst fähig und schlachterprobt?“ "
 }
