Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -266,5 +266,6 @@
   "mn82:38.7": "Manchmal schien es damals, als hätte ich übernatürliche Kräfte. Ich sehe niemanden, der mir an Kraft hätte gleichkommen können.“ ",
   "mn82:38.8": "„Was denkst du, großer König? ",
   "mn82:38.9": "Hast du heutzutage ebenso starke Schenkel und Arme und bist fähig und schlachterprobt?“ ",
-  "mn82:38.10": "„Nein, Meister Raṭṭhapāla. "
+  "mn82:38.10": "„Nein, Meister Raṭṭhapāla. ",
+  "mn82:38.11": "Denn jetzt bin ich alt, bejahrt und hochbetagt. Ich bin in vorgerücktem Alter und im letzten Lebensabschnitt angekommen. Ich bin achtzig Jahre alt. "
 }
