Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -267,5 +267,6 @@
   "mn82:38.8": "„Was denkst du, großer König? ",
   "mn82:38.9": "Hast du heutzutage ebenso starke Schenkel und Arme und bist fähig und schlachterprobt?“ ",
   "mn82:38.10": "„Nein, Meister Raṭṭhapāla. ",
-  "mn82:38.11": "Denn jetzt bin ich alt, bejahrt und hochbetagt. Ich bin in vorgerücktem Alter und im letzten Lebensabschnitt angekommen. Ich bin achtzig Jahre alt. "
+  "mn82:38.11": "Denn jetzt bin ich alt, bejahrt und hochbetagt. Ich bin in vorgerücktem Alter und im letzten Lebensabschnitt angekommen. Ich bin achtzig Jahre alt. ",
+  "mn82:38.12": "Manchmal will ich irgendwohin treten, aber mein Fuß geht irgendwo anders hin.“ "
 }
