Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -276,5 +276,6 @@
   "mn82:38.19": "Denn die Welt ist tatsächlich brüchig und wird fortgerissen. ",
   "mn82:39.1": "An diesem königlichen Hof gibt es Bataillone von Elefanten, Reitertruppen, Streitwagen oder Fußsoldaten. Sie dienen dazu, uns vor allen Bedrohungen zu schützen. Dennoch sagtest du: ",
   "mn82:39.2": "‚Die Welt hat keinen Schutz und keinen Retter.‘ ",
-  "mn82:39.4": "Wie ist da die Bedeutung dieser Aussage zu sehen?“ "
+  "mn82:39.4": "Wie ist da die Bedeutung dieser Aussage zu sehen?“ ",
+  "mn82:39.5": "„Was denkst du, großer König? "
 }
