Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -279,5 +279,5 @@
   "mn82:39.4": "Wie ist da die Bedeutung dieser Aussage zu sehen?“ ",
   "mn82:39.5": "„Was denkst du, großer König? ",
   "mn82:39.6": "Hast du irgendeine chronische Krankheit?“ ",
-  "mn82:39.7": "„Ja, das habe ich.“ "
+  "mn82:39.7": "„Ja, das habe ich. "
 }
