Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti1:2.3": "E qual è questa cosa? ",
   "iti1:2.4": "L’avidità.” ",
   "iti1:2.6": "Il Buddha spiegò il senso di ciò ",
-  "iti1:2.7": "in questo modo: ",
+  "iti1:2.7": "con queste parole: ",
   "iti1:3.1": "“Affamate/inappagate dall’avidità, ",
   "iti1:3.2": "le creature giungono a uno stato di miseria. ",
   "iti1:3.3": "Chi comprende del tutto l’avidità, ",
