Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
@@ -1,6 +1,6 @@
 {
   "iti1:1.1": "Così ho udito dal Buddha, dall’Arahant: ",
-  "iti1:2.1": "“Cercatori, sbarazzatevi di una sola cosa, ",
+  "iti1:2.1": "“Cercatori, abbandonate una sola cosa, ",
   "iti1:2.2": "e il non-ritorno è assicurato. ",
   "iti1:2.3": "E qual è questa cosa? ",
   "iti1:2.4": "L’avidità.” ",
